# infrastructure

./: .ansible-lint  .gitignore  .gitlab-ci.yml  Makefile  Pipfile  Puppetfile  README.md  ansible.cfg  bootstrap.yaml  environment.conf  hiera.yaml  hosts.yaml  post_run.yaml  pyproject.toml  s3-public-readable-no-dirlist.json  site.yml
.devcontainer/: Dockerfile  bashrc  devcontainer.json  setup.sh
.github/: dependabot.yml  renovate.json
actions/: backup.yaml  build-images.yaml  cleanup.yaml  cleanup.yml  fix.yaml  inventory.yaml  kick-cmk.yaml  puppet-install.yaml  puppet-run.yaml  puppet-update-dev.yaml  puppet-update.yaml  sentry-backup.yaml  sentry-cleanup.yaml  sentry-cleanup.yml  update-gravity.yaml  update.yaml  update.yml
awx/: new-vm-vps.json  new-vm.json  site.yaml
backups/: site.yaml
collections/: requirements.yml
compose/: adguard-main.yml  gitlab-main.yml  log-graylog.yml  mgmt-rancher.yml  minecraft.yaml  mon-adc.yml  mon-checkmk.yml  mon-grafana.yml  mon-oxidized.yml  plex-main.yml  unifi-main.yml  vault-main.yml
data/: default.yaml
ee/: Dockerfile
host_vars/: gitlab1.prod.beryju.org.yaml  log1.prod.beryju.org.yaml  mc1.prod.beryju.org.yaml  mon1.prod.beryju.org.yaml  nas1.prod.beryju.org.yaml  plex1.prod.beryju.org.yaml  rancher1.prod.beryju.org.yaml  unifi1.prod.beryju.org.yaml  vault1.prod.beryju.org.yaml
manifests/: site.pp
packer/: .gitignore  ubuntu-2004.json.pkr.hcl
provisioning/: example.yaml  new-vm.yaml  new-vm.yml  new.sh
puppet/: get_environment_commit.sh
scratch/: common.sh  down.sh  up.sh  userdata.sh
scripts/: ansible.sh
tf/: .gitignore  (+2 more)
(+413 files in other folders)
