[project]
name = "infrastructure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Jens Langhammer", email ="jens.langhammer@beryju.org" }]
dependencies = [
    "ansible==14.2.0",
    "ansible-dev-tools>=26.7.1",
    "ansible-lint==26.6.0",
    "ara==1.8.0",
    "bcrypt==5.0.0",
    "boto3==1.43.53",
    "hvac==2.4.0",
    "passlib==1.7.4",
    "python-dateutil==2.9.0.post0",
    "python-gitlab==8.4.0",
    "pytz==2026.2",
]
